# turro_crm-api

./: .env  alembic.ini  pyproject.toml
crm_api/: main.py
crm_api/crm/: app.py  auth_bearer.py  functions_action.py  functions_jwt.py
crm_api/crm/config/: base.py  config.py  db.py
crm_api/crm/locales/: en.yml  es.yml
crm_api/crm/models/: options.py
crm_api/crm/routes/: auth.py  options.py
migrations/: env.py
migrations/backupmigraciones/: 0477154e6a82_add_invoices_table.py  296bdc06e03a_add_contracts_table.py  2f2c4f135723_add_partners_table.py  4b5bfded6a56_add_field_sign_contract_in_users_table.py  586198893d89_update_field_is_provider_table.py  5868b9203be2_initital_migration.py  62837285e8fd_add_ststus_table.py  aef0ac579a04_creando_codificador_measure.py  b76e80e4dbfe_add_offers_table.py  bcf490ffa5ba_.py  c70b7ace77a0_add_initial_tables.py  ccc93a091ef8_add_rel_type_table.py  e8e95db6a8c8_add_contacts_table.py
migrations/versions/: 064d6f3ecce1_add_representer_table.py  10c313e215fe_.py  52ec6b38254b_add_province_table.py  6fb0838eb682_add_bank_accounts_table.py  76c16cf14fd9_actualizando_columna_de_name_en_.py  868ea237fb33_add_field_status_name_in_contract_table.py  8c4e270b5bc0_creando_las_tablas_user_y_options.py  8d317bd9e900_add_mark_table.py  8d317bd9e901_add_mark_product_relation.py  9fd74e18eaf8_added_schema_stock_with_entity_.py  a7eb018101b0_modify_partner_table.py  c70b7ace77a0_add_initial_tables.py  dfd26e8b86c4_modificaciones_en_atributo_measure_de_.py  e21bd7b93238_add_contacts_table.py  ea2be5e0c9ac_add_job_field_to_contacts_table.py
(+79 files in other folders)
